kube/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.0.0
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 8090
