kube/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.0.0
        resources:
          requests:
            cpu: 300m
            memory: 500Mi
          limits:
            cpu: 300m
            memory: 500Mi
        ports:
        - containerPort: 2181
