kube/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-service
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: NodePort
