kube/static-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-nginx
spec:
  selector:
    app: static-nginx
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
