kube/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper-service
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: NodePort
