kube/ingress-recourse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      # - path: /api/v1/books(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: book-service
      #       port: 
      #         number: 8084
      # - path: /api/v1/users(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: user-service
      #       port:
      #         number: 8086
      # - path: /api/v1/visits(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: visit-service
      #       port:
      #         number: 8085
      # - path: /api/v1/reviews(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: review-service
      #       port:
      #         number: 8087
      # - path: /api/v1/auth(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: auth-service
      #       port:
      #         number: 8082

      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: static-nginx
            port:
              number: 8081

      - path: /
        pathType: Exact
        backend:
          service:
            name: static-nginx
            port:
              number: 8081
