kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway
            port: 
              number: 8083

      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-nginx
            port:
              number: 8081
